# genesis_templates

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: tests.yaml
gst_templates/: jinja_functions.py  renders.py  repositories.py  settings.py  version.py
gst_templates/cmd/: create_project.py
gst_templates/common/: config.py  constants.py
templates/: py_dummy.settings.json  py_element.settings.json
templates/py_dummy/: README.md  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
templates/py_dummy/.github/workflows/: publish-to-pypi.yml  tests.yaml
templates/py_dummy/etc/{{ project.package_name }}/: {{ project.package_name }}.conf
templates/py_dummy/{{ project.package_name }}/api/: app.py  controllers.py  routes.py  versions.py
templates/py_dummy/{{ project.package_name }}/cmd/: user_api.py
templates/py_dummy/{{ project.package_name }}/common/: config.py  constants.py  log.py
templates/py_dummy/{{ project.package_name }}/dm/: models.py
templates/py_element/: README.md  pyproject.toml  setup.cfg  test-requirements.txt  tox.ini
templates/py_element/.github/workflows/: publish-to-pypi.yml  tests.yaml
templates/py_element/etc/systemd/: {{ project.package_name|replace("_", "-") }}-builder-agent.service  {{ project.package_name|replace("_", "-") }}-user-api.service
templates/py_element/etc/{{ project.package_name }}/: logging.yaml  {{ project.package_name }}.conf
templates/py_element/genesis/: genesis.yaml
templates/py_element/genesis/images/: bootstrap.sh  install.sh
templates/py_element/migrations/: 0000-init-example-table-f72eb7.py
templates/py_element/{{ project.package_name }}/: version.py
templates/py_element/{{ project.package_name }}/cmd/: builder.py  user_api.py
templates/py_element/{{ project.package_name }}/common/: log.py
templates/py_element/{{ project.package_name }}/common/api/middlewares/: errors.py
templates/py_element/{{ project.package_name }}/services/builders/: agents.py
templates/py_element/{{ project.package_name }}/tests/unit/: test_basic.py
templates/py_element/{{ project.package_name }}/user_api/api/: app.py  controllers.py  routes.py  versions.py
templates/py_element/{{ project.package_name }}/user_api/dm/: models.py
