[metadata]
name = Genesis Templates
summary = The Automated Control Subsystems Framework (ACSF) is a project designed to simplify and streamline the creation of automated control subsystems.
description_file =
    README.md
author = Genesis Corporation
author_email = eugene@frolov.net.ru
home_page = https://github.com/infraguys/genesis_templates
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[files]
packages =
    gst_templates

[entry_points]
console_scripts =
    genesis-create-project = gst_templates.cmd.create_project:main
