[metadata]
name = {{ project.name }}
summary = {{ project.summary }}
description_file =
    README.md
long_description_content_type = text/markdown
author = {{ author.name }}
author_email = {{ author.email }}
home_page = https://github.com/infraguys/{{ project.name }}/
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[files]
packages =
    {{ project.package_name }}
