[metadata]
name = {{ project.name }}
summary = {{ project.summary }}
description_file =
    README.md
long_description_content_type = text/markdown
author = {{ author.name }}
author_email = {{ author.email }}
home_page = https://github.com/infraguys/{{ project.package_name }}/
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13


[files]
packages =
    {{ project.package_name }}


[entry_points]
console_scripts =
    {{ project.package_name|replace('_', '-') }}-user-api = {{ project.package_name }}.cmd.user_api:main
    {{ project.package_name|replace('_', '-') }}-builder-agent = {{ project.package_name }}.cmd.builder:main
